Fix disappearing scrollbar   after opening node with width bigger than tree width

--- a/plugins/plugin-debugger/che-plugin-debugger-ide/src/main/resources/org/eclipse/che/plugin/debugger/ide/debugger.css
+++ b/plugins/plugin-debugger/che-plugin-debugger-ide/src/main/resources/org/eclipse/che/plugin/debugger/ide/debugger.css
@@ -39,6 +39,7 @@
 
 .debugTreeContainer {
     height: 100%;
+    width: 100%;
 }
 
 .watchExpressionsPanel .leftToolbarPart {
